feat: modify backend (#7)
* feat: modify backend

* fix: nullpointers